fix alignment for technologies list for large screen; change font size

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,900);
 @import url(https://fonts.googleapis.com/css?family=Bonbon);
 
-html, body, div, header, nav, ul, li, section, img, h1, h2, h3, h4, p, a, input {
+html, body, div, header, footer, nav, ul, li, section, img, h1, h2, h3, h4, p, a, input {
   margin: 0;
   border: 0;
   padding: 0;
@@ -283,10 +283,16 @@ div.blurb {
   display: none;
 }
 
+div.tech-container {
+  max-width: 100%;
+}
+
 div.row.technologies {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /*align-items: center;*/
+  max-width: 100%;
 }
 
 div#me {
@@ -355,6 +361,7 @@ ul#technologies {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin: 0 auto;
 }
 
 ul#technologies li {
@@ -430,6 +437,16 @@ div.box:nth-child(3) {
 
   nav a {
     margin-right: 20px;
+  }
+
+  section#about-me {
+    max-width: 75%;
+    margin: 0 auto;
+    text-align: left;
+  }
+
+  ul#technologies {
+    flex-direction: row;
   }
 
   a.resume {
